View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] |
ID | Project | Category | View Status | Date Submitted | Last Update |
0030995 | Open CASCADE | [OCCT] OCCT:Visualization | public | 2019-09-24 12:59 | 2020-09-21 09:57 |
|
Reporter | nds | |
Assigned To | nds | |
Priority | normal | Severity | minor | |
Status | new | Resolution | open | |
Platform | | OS | | OS Version | |
Product Version | | |
Target Version | [OCCT] 7.6.0* | Fixed in Version | | |
|
Summary | 0030995: Visualization - crash in angle computation between curvilinear faces |
Description | Crash in AIS::InitAngleBetweenCurvilinearFaces if the first face has BSplyne surface and UIso is not linear. |
Tags | No tags attached. |
|
Test case number | |
|
Attached Files | |
|