0030995: Visualization - crash in angle computation between curvilinear faces